app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self

 */
body {
  font-family: 'Roboto', sans-serif;
}

h1,
.h1,
h2,
.h2,
h3,
.h3 {
  margin: 0px;
  line-height: 1.5;
}

h4 a:hover {
  text-decoration: none;
  color: black;
  background-color:inherit;
}

p a:hover {
  text-decoration: none;
  color: black;
  background-color:inherit;
}

.navbar {
  background-color: #FF5A5A;
  color: white;
}

.navbar-inner {
    min-height: 0px;
}

.navbar-default .navbar-brand {
  line-height: 150px;
  height: 150px;
  padding: 0;
  margin-left: 1em;
  color: white;
  font-size: 500%;
  letter-spacing: 4px;

}

.navright li a {
  padding: 15px;
  margin-right: 20px;
  margin-top: 50px;
  float: right;
  line-height: 20px;
  color: white;
  letter-spacing: 1px;
}

.container-full {
  margin: 0 auto;
  width: 100%;
  color: white;
}

.container-full.subhead {
  margin-top: 1em;
  width: 100%;
  color: white;
  padding: 1em;
  background-color: #5AADFF;
  text-align: center;
}

.brand {
  font-size: 200%;
  margin: 1em;
  height: 100px;
  line-height: 100px;
  white-space: nowrap;
}

.footer-mid {
  /*margin: 1em;*/
  height: 100px;
  line-height: 100px;
  white-space: nowrap;
  text-align: center;
  letter-spacing: normal;
}

.flfooter {
  background-color: #5AFFAD;
  min-height: 100px;
  color: white;
  font-size: 100%;
  letter-spacing: 4px;
  vertical-align: middle;
  margin-top: 1em;
}

.social {
  color: white;
  padding: 2em;
}

.social a {
  color: #4A4A4A;
  text-decoration: none
}

.social a:hover {
  color: white;
  text-decoration: none
}

.social, .container-full :hover {
  text-decoration: none;
  background-color: inherit;
}

.artist-name {
  z-index:2;
  position:relative;
  top:250px;
  left:0px;
  text-transform: uppercase;
  font-size: 200%;
  background-color: gainsboro;
  text-align: center;
  display: inline-block;
  width: 250px;
  height: 75px;
  padding: 0.25em;
  line-height: 1.1em;
}

a.artist-name:hover {
  text-decoration: none;
}

.artist-title {
  text-transform: uppercase;
  font-size: 300%;
  line-height: 1.1em;
  padding-bottom: 1em;
}

.artist-detail {
  text-transform:none;
  font-size: 150%;
  font-weight: 100;
  line-height: 1.25em;
  padding-bottom: 1em;
}

.img-responsive {
  display: block;
  max-width: 100%;
  height: auto;
}

.img-250 {
  display: block;
  max-width: 250px;
  height: auto;
}

.music-link {
  display: inline-block;
  max-width: 140px;
}

.venue {
  font-size: 85%;
  color: #505050;
  padding-top: -0.25em;
  margin-left: 1em;
}

p.venue a {
  color: #5AADFF;
}

.btn {
  color: white;
  text-transform: uppercase;
  font-size: 150%;
  background-color: #4A4A4A;
  border-radius: 0;
  border: none;
}

.btn a {
  color: white;
}

.btn a:focus,
.btn a:hover {
  background-color: #eee;
  color: black;
  text-decoration: none;
}

input.btn:hover {
  background-color: #eee;
  color: black;
  text-decoration: none;
}

.btn.ticket-btn {
  color: white;
  background-color: #4A4A4A;
}

.btn.ticket-btn:hover {
  background-color: #eee;
  color: black;
  text-decoration: none;
}

.btn-more {
  color: white;
  text-transform: uppercase;
  font-size: 150%;
  background-color: #4A4A4A;
  border-radius: 0;
  border: none;
  margin: 1em 0.75em;
  padding: 20px;
  text-align: center;
}

.calbox {
  height: 200px;
  width: 100%;
  background-color: gainsboro;
  display: inline-block;
  position: relative;
  margin: 1em 1em 1em 2em;
  color: #4A4A4A;
  font-size: 150%
  padding: 10px;
  letter-spacing: normal;
}

.calbox {
  height: 200px;
  width: 100%;
  background-color: gainsboro;
  display: inline-block;
  position: relative;
  margin: 1em 1em 1em 2em;
  color: #4A4A4A;
  font-size: 150%
  padding: 50px;
  letter-spacing: normal;
}
.calbox:hover {
  text-decoration: none;
  background-color: inherit;
}

#map {
  height: 300px;
  width: 100%;
  margin-top: 1em;
}

